# job_streamer

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  build.sh  docker-compose.yml  pyproject.toml
actions/: __init__.py  application_actions.py  base.py  bio_actions.py  help_actions.py  job_automation_actions.py  job_hunt_actions.py  preferences_actions.py  project_actions.py  resume_actions.py  work_experience_actions.py
agent/: automator.py  run.py  types.py
agent/tools/: __init__.py  base.py  resume_tool.py
automation/: __init__.py
automation/core/: utils.py
automation/core/automator/: base.py  mock.py  types.py
automation/core/driver/: __init__.py  base.py  service.py
automation/core/pool/: __init__.py  base.py
automation/wellfound/: automator.py
client/base/: interactor.py
client/command_line/: base.py  parser.py  run.py  style.py
client/web/: app.py  run.py  ws_server.py  wsgi.py
client/web/templates/: index.html
conf/: config.toml  configuration.py  settings.py
data_handler/extraction/: resume_data_parser.py
data_handler/langauge_model/: client.py  prompt_generator.py
scripts/: migrate.py
services/database/: application.py  bio.py  job_hunt.py  preference.py  project.py  resume.py  work_experience.py
storage/core/: engine.py  init_db.py  models.py
storage/migrations/: env.py
storage/migrations/versions/: 63903c166457_initial_schema.py
tests/: conftest.py  test_model.py
tests/test_service/test_database/: test_application.py  test_bio.py  test_job_hunt.py  test_preference.py  test_resume.py
utils/: context.py  conversion.py  exception.py  file_helper.py  logging.py  thread_manager.py  types.py  validation.py
